--- a/values/common.yaml
+++ b/values/common.yaml
@@ -1,6 +1,7 @@
 testnetName: testnet
 mina:
   image: tizoc/mina-daemon:tracing-optional-optimizations-launcher-focal-berkeley-2
+  snarkCoordinatorImage: binier/mina-snark-worker-rs:latest
   privkeyPass:
   exposeGraphql: true
   seedPeers:
