--- a/values/common.yaml
+++ b/values/common.yaml
@@ -1,6 +1,6 @@
 testnetName: testnet
 mina:
-  image: tizoc/mina-daemon:tracing-optional-optimizations-launcher-focal-berkeley-3
+  image: tizoc/mina-daemon:tracing-optional-optimizations-launcher-focal-berkeley-4
   snarkCoordinatorImage: binier/mina-snark-worker-rs:latest
   privkeyPass:
   exposeGraphql: true
@@ -72,7 +72,7 @@ bpfDebugger:
   restartMinaOnExit: true
 
 logs:
-  enable: false
+  enable: true
 
 nodeSelector:
   preemptible: false
