--- a/values/node.yaml
+++ b/values/node.yaml
@@ -1,3 +1,9 @@
 mina:
   cpuRequest: 2
   memRequest: "12.0Gi"
+
+healthcheck:
+  enabled: true
+  failureThreshold: 90
+  periodSeconds: 10
+  initialDelaySeconds: 60
